--- a/notebooks/r&d_change_rag_prompt.ipynb
+++ b/notebooks/r&d_change_rag_prompt.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7040307b-da60-4144-93ec-827967cd4303",
    "metadata": {},
    "outputs": [],
@@ -34,8 +34,8 @@
     "sys.path.append(\"..\")\n",
     "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0bd4307c-a7b3-40f7-bc4e-e025c825eb90",
    "metadata": {},
    "outputs": [],
@@ -64,18 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b4ec5d7f-c129-46ac-a341-b0653a5f541e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Model discovery error: 401 Client Error: Unauthorized for url: https://api.openai.com/v1/models\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sys.path.append(\"../../mcp-servers/data-gouv-fr/\")\n",
     "from clients.search import SearchEngineClient\n",
@@ -84,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "250c1acf-753f-4b63-b44f-17be7f7ca933",
    "metadata": {},
    "outputs": [],
@@ -138,67 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b634e72d-78c3-40bb-a410-21596e20a50a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ecris un texte référencé en réponse à cette question : CNI\n",
-      "\n",
-      "Les références doivent être citées de cette manière (échape les guillements avec \\\", s'il y en a, dans les attributs de <ref>) : texte rédigé <ref title=\"[titre de la source]\" text=\"[passage pertinent dans la référence]\">[URL de la source]</ref>\n",
-      "\n",
-      "Si les références ne permettent pas de répondre, spécifie juste qu'il n'y a pas de réponse.\n",
-      "\n",
-      "Les 3 références disponibles :\n",
-      "\n",
-      "url: https://www.service-public.fr/particuliers/vosdroits/F12151\n",
-      "title: Médiateur de la SNCF Voyageurs : comment y recourir ? (['Quelle est la démarche pour saisir le médiateur de la SNCF Voyageurs ?'])\n",
-      "text: - Toute autre pièce à l'appui de votre demande (par exemple, carte de réduction)\n",
-      "- Copie numérique du mandat, si vous faites appel à un tiers pour saisir le médiateur à votre place. Ce tiers doit fournir une copie de votre pièce d'identité (par exemple, CNI)\n",
-      " Votre courrier doit être envoyé au médiateur de la SNCF Voyageurs.\n",
-      "Cas Contravention: Vous devez décrire précisément dans votre courrier l'objet de votre litige. Vous pouvez vous aider d'un modèle de lettre pour rédiger votre courrier : Vous devez joindre à votre courrier les documents suivant s : \n",
-      "- Copie du procès-verbal datant de moins de 3 mois\n",
-      "- Preuve de votre saisine du Centre De Recouvrement\n",
-      "- Copie numérique du mandat, si vous faites appel à un tiers pour saisir le médiateur à votre place. Ce tiers doit fournir une copie de votre pièce d'identité (par exemple, CNI)\n",
-      " Votre courrier doit être envoyé au médiateur de la SNCF Voyageurs. \n",
-      "\n",
-      "\n",
-      "url: https://www.service-public.fr/particuliers/vosdroits/F1051\n",
-      "title: Certificat de nationalité française (CNF) (['Joindre au formulaire les documents exigés pour toute demande de CNF'])\n",
-      "text: Cas Vous demandez un CNF pour vous-même: - Votre acte de naissance\n",
-      "- Document officiel d'identité\n",
-      "- Photographie d'identité récente et en couleur\n",
-      "- Justificatif de domicile. Exemple : dernier avis d'imposition ou de non imposition, facture d'électricité ou de gaz, de téléphone fixe ou d'accès à internet de moins de 3 mois, quittance de loyer de moins de 3 mois. En cas d'hébergement : attestation d'hébergement datée et signée, document officiel d'identité de l'hébergeant, justificatif de domicile de l'hébergeant, courrier à votre attention d'un organisme privé ou public envoyé à l'adresse de l'hébergeant.\n",
-      "Cas Vous demandez un CNF pour un enfant mineur: Cas Documents concernant le mineur: - Acte de naissance\n",
-      "- Document officiel d'identité s'il en a un\n",
-      "- Photographie d'identité récente et en couleur\n",
-      "- Justificatif de domicile si le mineur ne réside pas avec vous\n",
-      "Cas Documents vous concernant: - Document officiel d'identité\n",
-      "- Photographie d'identité récente et en couleur \n",
-      "\n",
-      "\n",
-      "url: https://entreprendre.service-public.fr/vosdroits/F23887\n",
-      "title: Comment un artisan doit-il faire sa déclaration d'activité ? (['Immatriculation au répertoire national des entreprises (RNE)'])\n",
-      "text: Vous devez créer un compte personnel. Puis vous devez cliquer sur la colonne « Entreprise » puis sur « Déposer une formalité d'entreprise ». Un formulaire en ligne interactif de 8 pages vous est proposé ; vous devez le remplir pas à pas. Un mode d'emploi est proposé sur ce site internet du Guichet unique. Vous devez numériser puis télécharger sur le site les pièces justificatives suivantes :\n",
-      "- Votre identité ( CNI ou passeport)\n",
-      "- La domiciliation de l'entreprise (facture, bail ou contrat de domiciliation pour une entreprise individuelle dont microentreprise) ou pour une société la copie des statuts\n",
-      "- Votre qualification professionnelle si votre profession est réglementée (diplôme, certificat, etc.)\n",
-      "- Une attestation de non-condamnation pour exercer le métier d'artisan ou de commerçant\n",
-      "- Une attestation de filiation (état civil, extrait de naissance, livret de famille) \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(do_rag(\"CNI\", limit=3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "b501211f-c850-428e-bdb9-2d51eb5cb167",
    "metadata": {},
    "outputs": [],
@@ -245,15 +187,7 @@
    "execution_count": null,
    "id": "6acdfa88-95ef-4adb-ad96-775628a42ccf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created expset: MFS ad-hoc RAG (54)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build the expset\n",
     "# --\n",
