--- a/notebooks/create_legalbenchrag_dataset.ipynb
+++ b/notebooks/create_legalbenchrag_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f33fde59-7aff-4f16-898d-95497d084548",
    "metadata": {},
    "outputs": [],
@@ -19,8 +19,8 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "\n",
-    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -31,176 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0867c195-260b-4d93-9abc-2337c9ba7c45",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total rows: 6889\n",
-      "Datasets: 4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>query</th>\n",
-       "      <th>output_true</th>\n",
-       "      <th>snippets</th>\n",
-       "      <th>dataset_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
-       "      <td>This agreement shall begin upon the date of it...</td>\n",
-       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
-       "      <td>cuad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
-       "      <td>This agreement shall begin upon the date of it...</td>\n",
-       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
-       "      <td>cuad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
-       "      <td>This Agreement may be terminated by either par...</td>\n",
-       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
-       "      <td>cuad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
-       "      <td>This Agreement is accepted by Company in the S...</td>\n",
-       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
-       "      <td>cuad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
-       "      <td>MA may not assign, sell, lease or otherwise tr...</td>\n",
-       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
-       "      <td>cuad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6884</th>\n",
-       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
-       "      <td>For purposes of this Agreement, “BCSI” shall m...</td>\n",
-       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
-       "      <td>contractnli</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6885</th>\n",
-       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
-       "      <td>The foregoing notwithstanding, the Recipient m...</td>\n",
-       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
-       "      <td>contractnli</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6886</th>\n",
-       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
-       "      <td>5. In the event that the Recipient is required...</td>\n",
-       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
-       "      <td>contractnli</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6887</th>\n",
-       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
-       "      <td>The foregoing notwithstanding, the Recipient m...</td>\n",
-       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
-       "      <td>contractnli</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6888</th>\n",
-       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
-       "      <td>4. Recipient and each of its Representatives s...</td>\n",
-       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
-       "      <td>contractnli</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6889 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  query  \\\n",
-       "0     Consider the Marketing Affiliate Agreement bet...   \n",
-       "1     Consider the Marketing Affiliate Agreement bet...   \n",
-       "2     Consider the Marketing Affiliate Agreement bet...   \n",
-       "3     Consider the Marketing Affiliate Agreement bet...   \n",
-       "4     Consider the Marketing Affiliate Agreement bet...   \n",
-       "...                                                 ...   \n",
-       "6884  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
-       "6885  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
-       "6886  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
-       "6887  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
-       "6888  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
-       "\n",
-       "                                            output_true  \\\n",
-       "0     This agreement shall begin upon the date of it...   \n",
-       "1     This agreement shall begin upon the date of it...   \n",
-       "2     This Agreement may be terminated by either par...   \n",
-       "3     This Agreement is accepted by Company in the S...   \n",
-       "4     MA may not assign, sell, lease or otherwise tr...   \n",
-       "...                                                 ...   \n",
-       "6884  For purposes of this Agreement, “BCSI” shall m...   \n",
-       "6885  The foregoing notwithstanding, the Recipient m...   \n",
-       "6886  5. In the event that the Recipient is required...   \n",
-       "6887  The foregoing notwithstanding, the Recipient m...   \n",
-       "6888  4. Recipient and each of its Representatives s...   \n",
-       "\n",
-       "                                               snippets dataset_name  \n",
-       "0     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
-       "1     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
-       "2     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
-       "3     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
-       "4     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
-       "...                                                 ...          ...  \n",
-       "6884  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
-       "6885  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
-       "6886  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
-       "6887  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
-       "6888  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
-       "\n",
-       "[6889 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -233,31 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c8e78237-7de5-4fdf-bd14-08904d3e83d8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'LegalBenchRAG',\n",
-       " 'readme': 'see https://github.com/zeroentropy-ai/legalbenchrag',\n",
-       " 'default_metric': 'judge_precision',\n",
-       " 'columns_map': None,\n",
-       " 'compliance': False,\n",
-       " 'id': 86,\n",
-       " 'created_at': '2025-12-03T22:21:56.709429',\n",
-       " 'size': 6889,\n",
-       " 'columns': ['query', 'output_true', 'snippets', 'dataset_name'],\n",
-       " 'parquet_size': 0,\n",
-       " 'parquet_columns': []}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Publish a dataset\n",
     "dataset = {\"name\": \"LegalBenchRAG\", \"readme\": \"see https://github.com/zeroentropy-ai/legalbenchrag\"\n",
