--- a/notebooks/run_evals_ocr_marker.ipynb
+++ b/notebooks/run_evals_ocr_marker.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -26,8 +26,8 @@
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
     "\n",
-    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "99280f36-5e7e-4837-a440-47ed00e8276f",
    "metadata": {},
    "outputs": [],
@@ -93,18 +93,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created expset: albert_OCR_v2 (60)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
