--- a/notebooks/run_evals_compliance.ipynb
+++ b/notebooks/run_evals_compliance.ipynb
@@ -296,7 +296,7 @@
    "source": [
     "products = \"ALBERT_API\"\n",
     "judge_name = \"gpt-4.1\"\n",
-    "judge_api_url = \"https://api.openai.com/v1\",\n",
+    "judge_api_url = \"https://api.openai.com/v1\"\n",
     "judge_api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
