--- a/notebooks/run_an_example_of_toolings_usage.ipynb
+++ b/notebooks/run_an_example_of_toolings_usage.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "judge_name = \"gpt-4.1\"\n",
-    "judge_api_url = \"https://api.openai.com/v1\",\n",
+    "judge_api_url = \"https://api.openai.com/v1\"\n",
     "judge_api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
