--- a/notebooks/run_your_own_llm_as_a_judge_metric.ipynb
+++ b/notebooks/run_your_own_llm_as_a_judge_metric.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "judge_name = \"gpt-4.1\"\n",
-    "judge_api_url = \"https://api.openai.com/v1\",\n",
+    "judge_api_url = \"https://api.openai.com/v1\"\n",
     "judge_api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
