Feat/documentations_simplification
* documentation

* change order view in run your own AI system

* change notebook

* change notebook

* minor

* minor

* change &

---------

Co-authored-by: Audrey_CLEVY <audrey_clevy@MacBook-Air-de-Audrey-CLEVY.local>
Co-authored-by: Audrey_CLEVY <audrey_clevy@airdeaureyclevy.home>

--- a/notebooks/rd_evalap_is_your_own_ia_system.ipynb
+++ b/notebooks/rd_evalap_is_your_own_ia_system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "f33fde59-7aff-4f16-898d-95497d084548",
    "metadata": {},
    "outputs": [],
@@ -22,8 +22,8 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "\n",
-    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -34,168 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "64cb00e3-0309-4af1-b4e7-e92703de47c4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>query</th>\n",
-       "      <th>output_true</th>\n",
-       "      <th>snippets</th>\n",
-       "      <th>dataset_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
-       "      <td>This agreement shall begin upon the date of it...</td>\n",
-       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
-       "      <td>cuad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
-       "      <td>This agreement shall begin upon the date of it...</td>\n",
-       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
-       "      <td>cuad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
-       "      <td>This Agreement may be terminated by either par...</td>\n",
-       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
-       "      <td>cuad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
-       "      <td>This Agreement is accepted by Company in the S...</td>\n",
-       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
-       "      <td>cuad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
-       "      <td>MA may not assign, sell, lease or otherwise tr...</td>\n",
-       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
-       "      <td>cuad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6884</th>\n",
-       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
-       "      <td>For purposes of this Agreement, “BCSI” shall m...</td>\n",
-       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
-       "      <td>contractnli</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6885</th>\n",
-       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
-       "      <td>The foregoing notwithstanding, the Recipient m...</td>\n",
-       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
-       "      <td>contractnli</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6886</th>\n",
-       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
-       "      <td>5. In the event that the Recipient is required...</td>\n",
-       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
-       "      <td>contractnli</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6887</th>\n",
-       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
-       "      <td>The foregoing notwithstanding, the Recipient m...</td>\n",
-       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
-       "      <td>contractnli</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6888</th>\n",
-       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
-       "      <td>4. Recipient and each of its Representatives s...</td>\n",
-       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
-       "      <td>contractnli</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6889 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  query  \\\n",
-       "0     Consider the Marketing Affiliate Agreement bet...   \n",
-       "1     Consider the Marketing Affiliate Agreement bet...   \n",
-       "2     Consider the Marketing Affiliate Agreement bet...   \n",
-       "3     Consider the Marketing Affiliate Agreement bet...   \n",
-       "4     Consider the Marketing Affiliate Agreement bet...   \n",
-       "...                                                 ...   \n",
-       "6884  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
-       "6885  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
-       "6886  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
-       "6887  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
-       "6888  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
-       "\n",
-       "                                            output_true  \\\n",
-       "0     This agreement shall begin upon the date of it...   \n",
-       "1     This agreement shall begin upon the date of it...   \n",
-       "2     This Agreement may be terminated by either par...   \n",
-       "3     This Agreement is accepted by Company in the S...   \n",
-       "4     MA may not assign, sell, lease or otherwise tr...   \n",
-       "...                                                 ...   \n",
-       "6884  For purposes of this Agreement, “BCSI” shall m...   \n",
-       "6885  The foregoing notwithstanding, the Recipient m...   \n",
-       "6886  5. In the event that the Recipient is required...   \n",
-       "6887  The foregoing notwithstanding, the Recipient m...   \n",
-       "6888  4. Recipient and each of its Representatives s...   \n",
-       "\n",
-       "                                               snippets dataset_name  \n",
-       "0     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
-       "1     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
-       "2     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
-       "3     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
-       "4     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
-       "...                                                 ...          ...  \n",
-       "6884  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
-       "6885  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
-       "6886  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
-       "6887  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
-       "6888  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
-       "\n",
-       "[6889 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fetch the dataset from Evalap\n",
     "# --\n",
@@ -212,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "474ad967-2543-4f4d-91d0-24abe091d9fd",
    "metadata": {},
    "outputs": [],
@@ -227,18 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "id": "0867c195-260b-4d93-9abc-2337c9ba7c45",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created expset: LegalBenchRAG Evaluation (111)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initial NORAG experiments\n",
     "# --\n",
@@ -286,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "id": "7c5d819c-d820-4584-ad9d-c9ec04a2d443",
    "metadata": {},
    "outputs": [],
@@ -342,86 +176,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "id": "31b924c1-0f80-4f89-a266-07bafe389364",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Use the following sources of information as a source of truth if they address the question:\n",
-      "\n",
-      "<SOURCE>\n",
-      "\n",
-      "1\n",
-      "\n",
-      "Source: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020\n",
-      "\n",
-      "---\n",
-      "\n",
-      "\n",
-      "2\n",
-      "\n",
-      "Source: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020\n",
-      "\n",
-      "---\n",
-      "\n",
-      "\n",
-      "4\n",
-      "\n",
-      "Source: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020\n",
-      "\n",
-      "---\n",
-      "\n",
-      "\n",
-      "</SOURCE>\n",
-      "\n",
-      "QUESTION: \n",
-      "CNI\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(do_rag(\"CNI\", collection_name=\"legalbenchrag_v1\", model_embedding=\"BAAI/bge-m3\", limit=3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "c44dfa6c-61c3-4bda-bd42-a17e9611b3ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LLM API error: Internal Server Error\n",
-      "\n",
-      "Error: 500 Server Error: Internal Server Error for url: https://albert.api.etalab.gouv.fr/v1/embeddings, retrying in 5 seconds...\n",
-      "LLM Generation Error: <html>\n",
-      "<head><title>504 Gateway Time-out</title></head>\n",
-      "<body>\n",
-      "<center><h1>504 Gateway Time-out</h1></center>\n",
-      "<hr><center>nginx/1.27.4</center>\n",
-      "</body>\n",
-      "</html>\n",
-      "\n",
-      "\n",
-      "Error: 504 Server Error: Gateway Time-out for url: https://albert.api.etalab.gouv.fr/v1/chat/completions, retrying in 5 seconds...\n",
-      "LLM Generation Error: <html>\n",
-      "<head><title>504 Gateway Time-out</title></head>\n",
-      "<body>\n",
-      "<center><h1>504 Gateway Time-out</h1></center>\n",
-      "<hr><center>nginx/1.27.4</center>\n",
-      "</body>\n",
-      "</html>\n",
-      "\n",
-      "\n",
-      "Error: 504 Server Error: Gateway Time-out for url: https://albert.api.etalab.gouv.fr/v1/chat/completions, retrying in 5 seconds...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Async computing -- RAG generation\n",
     "# --\n",
@@ -483,20 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "id": "6c0af8e8-cc10-47da-9aaf-8a102156b432",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n",
-      "1000\n",
-      "1000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for answers in model_answers:\n",
     "    print(len([x for x in answers if x.strip()]))"
@@ -504,18 +262,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "d3744c5f-cae7-427a-a765-a630e6b0f266",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Patch expset: LegalBenchRAG Evaluation v3 (50)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Adding RAG model to the experiment set\n",
     "# --\n",
