--- a/notebooks/run_an_example_of_toolings_usage.ipynb
+++ b/notebooks/run_an_example_of_toolings_usage.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -28,8 +28,8 @@
     "sys.path.append(\"..\")\n",
     "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -40,18 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "ad462cdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "judge_name = \"gpt-4.1\"\n",
+    "judge_api_url = \"https://api.openai.com/v1\"\n",
+    "judge_api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created expset: mfs_tooling_v8 (51)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
@@ -63,7 +67,11 @@
     "    \"dataset\" : \"MFS_questions_v01\",\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}, \"system_prompt\": system_prompt},\n",
     "    \"metrics\" : metrics,\n",
-    "    \"judge_model\": \"gpt-4o\",\n",
+    "    \"judge_model\": {\n",
+    "        \"name\": judge_name,\n",
+    "        \"base_url\": judge_api_url,\n",
+    "        \"api_key\": judge_api_key,\n",
+    "},\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
