--- a/notebooks/run_evals_models_with_rag.ipynb
+++ b/notebooks/run_evals_models_with_rag.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "587a2251-9dc2-4a66-b48f-3eb49cf6b5bf",
    "metadata": {},
    "outputs": [],
@@ -46,18 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "31b8c825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "judge_name = \"gpt-4.1\"\n",
+    "judge_api_url = \"https://api.openai.com/v1\"\n",
+    "judge_api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ecb4a91a-09aa-49dc-8d1c-682ca14b111f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created expset: Albert - RAG (lexical boosting) v31-10-25 (42)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Design and tun the experiments\n",
     "# --\n",
@@ -67,7 +71,11 @@
     "common_params = {\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
     "    \"metrics\" : metrics,\n",
-    "    \"judge_model\": \"gpt-4.1\",\n",
+    "    \"judge_model\": {\n",
+    "        \"name\": judge_name,\n",
+    "        \"base_url\": judge_api_url,\n",
+    "        \"api_key\": judge_api_key,\n",
+    "    },\n",
     "}\n",
     "grid_params = {\n",
     "    \"dataset\": [\"MFS_questions_v01\",  \"Assistant IA - QA\"],\n",
@@ -112,18 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "dcfcd6b6-0019-4c19-915d-623ab8e4d045",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Patched expset: Albert - RAG (lexical boosting) v31-10-25 (42)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Patching the experiment set\n",
     "\n",
