--- a/notebooks/run_evals_compliance.ipynb
+++ b/notebooks/run_evals_compliance.ipynb
@@ -105,8 +105,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "\n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
@@ -295,7 +295,9 @@
    "outputs": [],
    "source": [
     "products = \"ALBERT_API\"\n",
-    "JUDGE = \"gpt-5-mini\""
+    "judge_name = \"gpt-4.1\"\n",
+    "judge_api_url = \"https://api.openai.com/v1\"\n",
+    "judge_api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
   {
@@ -344,7 +346,11 @@
     "            \"sampling_params\": {\"temperature\": 0.2},\n",
     "        },\n",
     "        \"metrics\": metrics,\n",
-    "        \"judge_model\": JUDGE,\n",
+    "        \"judge_model\": {\n",
+    "            \"name\": judge_name,\n",
+    "            \"base_url\": judge_api_url,\n",
+    "            \"api_key\": judge_api_key,\n",
+    "    },\n",
     "    }\n",
     "    #models run for this expset\n",
     "    grid_params = {\n",
