--- a/notebooks/run_evals_for_your_own_IA_system.ipynb
+++ b/notebooks/run_evals_for_your_own_IA_system.ipynb
@@ -146,7 +146,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "JUDGE = \"gpt-4.1\"\n",
+    "judge_name = \"gpt-4.1\"\n",
+    "judge_api_url = \"https://api.openai.com/v1\"\n",
+    "judge_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
     "products = \"assistant-RH\"\n",
     "dataset_name = \"assistant-RH_head(2)\"\n",
     "\n",
@@ -158,7 +161,11 @@
     "common_params = {\n",
     "    \"dataset\": dataset_name,\n",
     "    \"metrics\": metrics,\n",
-    "    \"judge_model\": JUDGE,\n",
+    "    \"judge_model\": {\n",
+    "        \"name\": judge_name,\n",
+    "        \"base_url\": judge_api_url,\n",
+    "        \"api_key\": judge_api_key,\n",
+    "},\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
