--- a/notebooks/RAG_evaluation.ipynb
+++ b/notebooks/RAG_evaluation.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "225d7fe1-b079-4903-8982-6a36e35d4c41",
    "metadata": {},
    "outputs": [
@@ -425,14 +425,15 @@
        " '2\\n\\nSource: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "se_client = SearchEngineClient()\n",
-    "hits = se_client.search(\"legalbenchrag_v2\", \"CNI\", limit=3, method=\"hybrid\", model_embedding=\"BAAI/bge-m3\")\n",
+    "hits = se_client.search(\"legalbenchrag_v2\", \"CNI\", limit=3, method=\"semantic\", model_embedding=\"BAAI/bge-m3\")\n",
+    "#hits = se_client.search(\"legalbenchrag_v4\", \"CNI\", limit=3, method=\"hybrid\", model_embedding=\"qwen3-embedding-8b\")\n",
     "print(hits)\n",
     "hits = rerank(\"CNI\", [h[\"text\"] for h in hits], model=\"BAAI/bge-reranker-v2-m3\")\n",
     "hits"
@@ -499,50 +500,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "c44dfa6c-61c3-4bda-bd42-a17e9611b3ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LLM Generation Error: <html>\n",
-      "<head><title>504 Gateway Time-out</title></head>\n",
-      "<body>\n",
-      "<center><h1>504 Gateway Time-out</h1></center>\n",
-      "<hr><center>nginx/1.29.3</center>\n",
-      "</body>\n",
-      "</html>\n",
-      "\n",
-      "\n",
-      "Error: 504 Server Error: Gateway Time-out for url: https://albert.api.etalab.gouv.fr/v1/chat/completions, retrying in 5 seconds...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Async computing -- RAG generation\n",
     "# --\n",
     "from functools import partial\n",
     "\n",
+    "\"\"\"\n",
+    "lbrv2: + code factorisé\n",
+    "k:40\n",
+    "lw: 0.5\n",
+    "sw: 1\n",
+    "\n",
+    "lbrv3: + code factorisé\n",
+    "k: 60\n",
+    "lw: 1\n",
+    "sw: 1.5\n",
+    "\n",
+    "lbvrv4: header chunk, k20\n",
+    "\n",
+    "v4.5: k:2\n",
+    "\n",
+    "v4.6: k:10 <- *\n",
+    "\n",
+    "v5: reranker\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "# The models to runs\n",
     "models = [\n",
-    "   {\n",
-    "     \"aliased_name\": \"model_hybrid_20_bgem3_lbrv5\",\n",
+    "       {\n",
+    "     \"aliased_name\": \"model_hybrid_7_qwen3_lbrv4.6\",\n",
     "     \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "     \"collection_name\": \"legalbenchrag_v3\",\n",
-    "     \"model_embedding\": \"BAAI/bge-m3\",\n",
-    "     \"model_rerank\": \"BAAI/bge-reranker-v2-m3\",\n",
+    "     \"collection_name\": \"legalbenchrag_v4\",\n",
+    "     \"model_embedding\": \"qwen3-embedding-8b\",\n",
     "     \"search_method\": \"hybrid\",\n",
-    "     \"limit\": 20,\n",
+    "     \"limit\": 7,\n",
     "     \"system_prompt\": system_prompt,\n",
     "     \"sampling_params\": sampling_params,\n",
     "    },\n",
     "    {\n",
-    "     \"aliased_name\": \"model_semantic_20_bgem3_lbrv5\",\n",
+    "     \"aliased_name\": \"model_semantic_20_qwen3_lbrv4.6\",\n",
     "     \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "     \"collection_name\": \"legalbenchrag_v3\",\n",
-    "     \"model_embedding\": \"BAAI/bge-m3\",\n",
+    "     \"collection_name\": \"legalbenchrag_v4\",\n",
+    "     \"model_embedding\": \"qwen3-embedding-8b\",\n",
+    "     \"search_method\": \"semantic\",\n",
+    "     \"limit\": 20,\n",
+    "     \"system_prompt\": system_prompt,\n",
+    "     \"sampling_params\": sampling_params,\n",
+    "    },\n",
+    "   {\n",
+    "     \"aliased_name\": \"model_hybrid_7_qwen3_lbrv5\",\n",
+    "     \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "     \"collection_name\": \"legalbenchrag_v4\",\n",
+    "     \"model_embedding\": \"qwen3-embedding-8b\",\n",
+    "     \"model_rerank\": \"BAAI/bge-reranker-v2-m3\",\n",
+    "     \"search_method\": \"hybrid\",\n",
+    "     \"limit\": 7,\n",
+    "     \"system_prompt\": system_prompt,\n",
+    "     \"sampling_params\": sampling_params,\n",
+    "    },\n",
+    "    {\n",
+    "     \"aliased_name\": \"model_semantic_20_qwen3_lbrv5\",\n",
+    "     \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "     \"collection_name\": \"legalbenchrag_v4\",\n",
+    "     \"model_embedding\": \"qwen3-embedding-8b\",\n",
     "     \"model_rerank\": \"BAAI/bge-reranker-v2-m3\",\n",
     "     \"search_method\": \"semantic\",\n",
     "     \"limit\": 20,\n",
@@ -574,22 +600,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6c0af8e8-cc10-47da-9aaf-8a102156b432",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'model_answers' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m answers \u001b[38;5;129;01min\u001b[39;00m \u001b[43mmodel_answers\u001b[49m:\n\u001b[32m      2\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m([x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m answers \u001b[38;5;28;01mif\u001b[39;00m x.strip()]))\n",
-      "\u001b[31mNameError\u001b[39m: name 'model_answers' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for answers in model_answers:\n",
     "    print(len([x for x in answers if x.strip()]))"
@@ -597,18 +611,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "d3744c5f-cae7-427a-a765-a630e6b0f266",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Patch expset: LegalBenchRAG Evaluation v1 (111)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Adding RAG model to the experiment set (patching)\n",
     "# --\n",
