fix: notebook rag

--- a/notebooks/RAG_evaluation.ipynb
+++ b/notebooks/RAG_evaluation.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "225d7fe1-b079-4903-8982-6a36e35d4c41",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'text': '1\\n\\nSource: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020', '__score': 0.72001475}, {'text': '2\\n\\nSource: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020', '__score': 0.7198786}, {'text': '4\\n\\nSource: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020', '__score': 0.7191409}]\n"
+      "[{'text': '1\\n\\nSource: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020', '__score': 0.7200798}, {'text': '2\\n\\nSource: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020', '__score': 0.7199438}, {'text': '4\\n\\nSource: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020', '__score': 0.71921223}]\n"
      ]
     },
     {
@@ -425,7 +425,7 @@
        " '2\\n\\nSource: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "31b924c1-0f80-4f89-a266-07bafe389364",
    "metadata": {},
    "outputs": [
@@ -528,31 +528,30 @@
     "\n",
     "v5: reranker\n",
     "\n",
-    "\n",
     "\"\"\"\n",
     "\n",
     "# The models to runs\n",
     "models = [\n",
-    "       {\n",
-    "     \"aliased_name\": \"model_hybrid_7_qwen3_lbrv4.6\",\n",
-    "     \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "     \"collection_name\": \"legalbenchrag_v4\",\n",
-    "     \"model_embedding\": \"qwen3-embedding-8b\",\n",
-    "     \"search_method\": \"hybrid\",\n",
-    "     \"limit\": 7,\n",
-    "     \"system_prompt\": system_prompt,\n",
-    "     \"sampling_params\": sampling_params,\n",
-    "    },\n",
-    "    {\n",
-    "     \"aliased_name\": \"model_semantic_20_qwen3_lbrv4.6\",\n",
-    "     \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "     \"collection_name\": \"legalbenchrag_v4\",\n",
-    "     \"model_embedding\": \"qwen3-embedding-8b\",\n",
-    "     \"search_method\": \"semantic\",\n",
-    "     \"limit\": 20,\n",
-    "     \"system_prompt\": system_prompt,\n",
-    "     \"sampling_params\": sampling_params,\n",
-    "    },\n",
+    "    #{\n",
+    "    # \"aliased_name\": \"model_hybrid_7_qwen3_lbrv4.6\",\n",
+    "    # \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "    # \"collection_name\": \"legalbenchrag_v4\",\n",
+    "    # \"model_embedding\": \"qwen3-embedding-8b\",\n",
+    "    # \"search_method\": \"hybrid\",\n",
+    "    # \"limit\": 7,\n",
+    "    # \"system_prompt\": system_prompt,\n",
+    "    # \"sampling_params\": sampling_params,\n",
+    "    #},\n",
+    "    #{\n",
+    "    # \"aliased_name\": \"model_semantic_20_qwen3_lbrv4.6\",\n",
+    "    # \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "    # \"collection_name\": \"legalbenchrag_v4\",\n",
+    "    # \"model_embedding\": \"qwen3-embedding-8b\",\n",
+    "    # \"search_method\": \"semantic\",\n",
+    "    # \"limit\": 20,\n",
+    "    # \"system_prompt\": system_prompt,\n",
+    "    # \"sampling_params\": sampling_params,\n",
+    "    #},\n",
     "   {\n",
     "     \"aliased_name\": \"model_hybrid_7_qwen3_lbrv5\",\n",
     "     \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
@@ -600,10 +599,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6c0af8e8-cc10-47da-9aaf-8a102156b432",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "1000\n"
+     ]
+    }
+   ],
    "source": [
     "for answers in model_answers:\n",
     "    print(len([x for x in answers if x.strip()]))"
@@ -611,10 +619,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d3744c5f-cae7-427a-a765-a630e6b0f266",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patch expset: LegalBenchRAG Evaluation v1 (111)\n"
+     ]
+    }
+   ],
    "source": [
     "# Adding RAG model to the experiment set (patching)\n",
     "# --\n",
