--- a/notebooks/RAG_evaluation.ipynb
+++ b/notebooks/RAG_evaluation.ipynb
@@ -510,24 +510,29 @@
     "from functools import partial\n",
     "\n",
     "\"\"\"\n",
-    "lbrv2: + code factorisé\n",
-    "k:40\n",
-    "lw: 0.5\n",
-    "sw: 1\n",
+    "sans \"lbrv\": simple chunking\n",
+    "k: 10, lw: 1, sw: 1.5\n",
     "\n",
-    "lbrv3: + code factorisé\n",
-    "k: 60\n",
-    "lw: 1\n",
-    "sw: 1.5\n",
+    "lbrv2: simple chunking\n",
+    "k: 40, lw: 0.5, sw: 1\n",
     "\n",
-    "lbvrv4: header chunk, k20\n",
+    "lbrv2.5: simple chunking\n",
+    "k: 50, lw: 1, sw: 1\n",
     "\n",
-    "v4.5: k:2\n",
+    "lbrv3: simple chunking\n",
+    "k: 60, lw: 1, sw: 1.5\n",
     "\n",
-    "v4.6: k:10 <- *\n",
+    "lbvrv4: header chunking\n",
+    "k20, lw: 1, sw: 1.5 \n",
     "\n",
-    "v5: reranker\n",
+    "v4.5: header chunking\n",
+    "k:2, lw: 1, sw: 1.5\n",
     "\n",
+    "v4.6: header chunking\n",
+    "k:10, lw: 1, sw: 1.5 (best)\n",
+    "\n",
+    "v5: header chunking + reranker\n",
+    "k:10, lw: 1, sw: 1.5\n",
     "\"\"\"\n",
     "\n",
     "# The models to runs\n",
