chore: remove public EvalAP references from notebooks

--- a/notebooks/run_an_example_of_toolings_usage.ipynb
+++ b/notebooks/run_an_example_of_toolings_usage.ipynb
@@ -29,7 +29,7 @@
     "from evalap.utils import log_and_raise_for_status\n",
     "\n",
     "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
