--- a/notebooks/run_dataset_experiences_demo.ipynb
+++ b/notebooks/run_dataset_experiences_demo.ipynb
@@ -8,7 +8,7 @@
     "# Demo for launching dataset experiment in EVALAP\n",
     "\n",
     "- code: https://github.com/etalab-ia/evalap\n",
-    "- api documentation: https://evalap.etalab.gouv.fr/redoc"
+    "- api documentation: http://localhost:8000/redoc"
    ]
   },
   {
