--- a/notebooks/RAG_evaluation.ipynb
+++ b/notebooks/RAG_evaluation.ipynb
@@ -35,7 +35,7 @@
     "dotenv.load_dotenv(\"../.env\")\n",
     "\n",
     "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
