--- a/notebooks/run_evals_compliance.ipynb
+++ b/notebooks/run_evals_compliance.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "\n",
     "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "\n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
