--- a/notebooks/run_evals_models_raw.ipynb
+++ b/notebooks/run_evals_models_raw.ipynb
@@ -31,7 +31,7 @@
     "sys.path.append(\"..\")\n",
     "\n",
     "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "# keys\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
