--- a/notebooks/run_evals_models_with_rag.ipynb
+++ b/notebooks/run_evals_models_with_rag.ipynb
@@ -31,7 +31,7 @@
     "sys.path.append(\"..\")\n",
     "\n",
     "EG1_API_URL = \"http://localhost:8000/v1\"\n",
-    "#EG1_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
     "EG1_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL_LOCAL = \"http://localhost:8002/v1\"\n",
     "ALBERT_API_KEY_LOCAL = os.getenv(\"ALBERT_API_KEY_\")\n",
