--- a/notebooks/run_evals_with_crossvalidation.ipynb
+++ b/notebooks/run_evals_with_crossvalidation.ipynb
@@ -29,7 +29,7 @@
     "sys.path.append(\"..\")\n",
     "\n",
     "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
