--- a/notebooks/run_your_own_llm_as_a_judge_metric.ipynb
+++ b/notebooks/run_your_own_llm_as_a_judge_metric.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
